fix: spacing

--- a/styles/components/profilePic.module.css
+++ b/styles/components/profilePic.module.css
@@ -46,7 +46,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 32px; /* 106.667% */
-    margin-bottom: 32px;
+    margin-bottom: 48px;
 }
 
 .nftSection {
